# AiFlashcardGenerator

./: App.jsx  app.json  package-lock.json  package.json
android/: gradle.properties  settings.gradle
android/app/: CMakeLists.txt  build.gradle  google-services.json
android/app/src/main/java/com/aiflashcardgenerator/: MainActivity.kt  MainApplication.kt
android/app/src/main/res/values/: strings.xml
ios/: Podfile
ios/AiFlashcardGenerator/: AppDelegate.swift  Info.plist  LaunchScreen.storyboard
ios/AiFlashcardGenerator.xcodeproj/: project.pbxproj
ios/AiFlashcardGenerator.xcodeproj/xcshareddata/xcschemes/: AiFlashcardGenerator.xcscheme
src/components/: FlashcardViewer.js  ImagePicker.js  ProgressStats.js  ThemeToggle.js
src/config/: firebase.js
src/context/: AppContext.js
src/navigation/: AppNavigator.js
src/screens/: HomeScreen.js  InputScreen.js  ProgressScreen.js  StudyScreen.js
src/services/: ImageUtils.ts  TF.js  databaseService.js  ocrService.js  openaiService.js  ttsService.js
src/utils/: spacedRepetition.js
